[gd_scene load_steps=3 format=2]

[ext_resource path="res://Arts/Sprites/Background/Sky.png" type="Texture" id=1]
[ext_resource path="res://Scrpits/Menu.gd" type="Script" id=2]

[node name="Menu" type="Node"]
script = ExtResource( 2 )

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 511.315, 306.219 )
scale = Vector2( 1.62435, 0.961437 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.502
anchor_bottom = 0.005
margin_left = -104.497
margin_top = 49.4975
margin_right = -2.54535
margin_bottom = 60.4975
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "JUMPING MINER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -166.059
margin_bottom = -121.059
rect_scale = Vector2( 2, 2 )
text = "START GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -7.66693
margin_bottom = 37.3331
rect_scale = Vector2( 2, 2 )
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGame" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = 154.968
margin_bottom = 199.968
rect_scale = Vector2( 2, 2 )
text = "QUIT GAME"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="QuitGame" to="." method="_on_QuitGame_pressed"]
